[CLOUDTRUST-8009] Adapt features to KC tests framework